--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@ h1, h2, h3, h4, h5, h6, span{
     line-height: 1.25;
 }
 
+h1{
+    font-size: 27px;
+}
+
 p{
     line-height: 1.5;
     font-size: 16px;
@@ -20,6 +24,25 @@ li{
     list-style-type: none;
 }
 
+.flex{
+    display: flex;
+}
+
+.flex-1{
+    flex: 1;
+}
+
+.row{
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+}
+.text--blue{
+color: rgb(16, 184, 184);
+}
+.text--red{
+   color: red; 
+}
 /*NAVAGATION BAR*/
 
 nav{
@@ -45,7 +68,7 @@ font-weight: 700;
 }
 
 .nav__link--anchor-primary{
-  background-color: blueviolet;
+  background-color: rgb(16, 184, 184);
   padding: 8px 20px;
   border-radius: 50px;
   color: whitesmoke;
@@ -53,11 +76,44 @@ font-weight: 700;
 }
 
 .nav__link--anchor-primary:hover{
-   background-color:#5d3eff;
+   background-color:green;
 }
 .personal__logo{
     font-size: 24px;
-    color: blueviolet;
+    color: rgb(16, 184, 184);
     margin: 0 12px;
     font-weight: bold;
+}
+
+/* ABOUT ME */
+#about-me{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.about-me__info--container{
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+max-width: 900px;
+margin: 0 auto;
+}
+
+.about-me__picture--mask{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 0 3px 16px rgb(16, 184, 184);
+    margin-bottom: 20px;
+}
+
+.about-me__picture{
+    width: 134%;
+}
+
+.about-me__info--para{
+    font-size: 20px;
 }
