--- a/styles.css
+++ b/styles.css
@@ -1,119 +1,146 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
-*{
-    font-family: 'Roboto', sans-serif;  
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
+* {
+  font-family: "Roboto", sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-h1, h2, h3, h4, h5, h6, span{
-    color: #242424;
-    text-align: center;
-    line-height: 1.25;
-}
-
-h1{
-    font-size: 27px;
-}
-
-p{
-    line-height: 1.5;
-    font-size: 16px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+span {
+  color: #242424;
+  text-align: center;
+  line-height: 1.25;
 }
 
-li{
-    list-style-type: none;
+h1 {
+  font-size: 27px;
 }
 
-.flex{
-    display: flex;
+p {
+  line-height: 1.5;
+  font-size: 16px;
 }
 
-.flex-1{
-    flex: 1;
+li {
+  list-style-type: none;
 }
 
-.row{
-    width: 100%;
-    max-width: 800px;
-    margin: 0 auto;
+.flex {
+  display: flex;
 }
-.text--blue{
-color: rgb(16, 184, 184);
+
+.flex-1 {
+  flex: 1;
 }
-.text--red{
-   color: red; 
+
+.row {
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+}
+.text--blue {
+  color: rgb(16, 184, 184);
+}
+.text--red {
+  color: red;
 }
 /*NAVAGATION BAR*/
 
-nav{
-    height: 100px;
-    width: 100%;
-    max-width: 1000px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+nav {
+  height: 100px;
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.nav__link--list{
-    display: flex;
-    
+.nav__link--list {
+  display: flex;
 }
 
-.nav__link--anchor{
-margin: 0 12px;
-color: #242424;
-text-decoration: none;
-font-weight: 700;
+.nav__link--anchor {
+  margin: 0 12px;
+  color: #242424;
+  text-decoration: none;
+  font-weight: 700;
 }
 
-.nav__link--anchor-primary{
+.nav__link--anchor-primary {
   background-color: rgb(16, 184, 184);
   padding: 8px 20px;
   border-radius: 50px;
   color: whitesmoke;
-  transition: all 300ms ease;
+  transition: all 500ms ease;
 }
 
-.nav__link--anchor-primary:hover{
-   background-color:green;
+.nav__link--anchor-primary:hover {
+  background-color: green;
 }
-.personal__logo{
-    font-size: 24px;
-    color: rgb(16, 184, 184);
-    margin: 0 12px;
-    font-weight: bold;
+.personal__logo {
+  font-size: 24px;
+  color: rgb(16, 184, 184);
+  margin: 0 12px;
+  font-weight: bold;
 }
 
 /* ABOUT ME */
-#about-me{
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+#about-me {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
-
-.about-me__info--container{
+.about-me__info{
 display: flex;
 flex-direction: column;
-justify-content: center;
+}
+
+.about-me__info--container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 900px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.about-me__picture--mask {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  box-shadow: 0 3px 16px rgb(1, 133, 40);
+  margin-bottom: 20px;
+}
+
+.about-me__picture {
+  width: 134%;
+}
+
+.about-me__info--para {
+  font-size: 20px;
+}
+
+.about-me__link {
+  color: rgb(16, 184, 184);
+  font-size: 29px;
+  text-decoration: none;
+  padding: 0 5px;
+}
+
+.about-me__img--container{
+flex: 1;
+display: flex;
 align-items: center;
-max-width: 900px;
-margin: 0 auto;
 }
 
-.about-me__picture--mask{
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    overflow: hidden;
-    box-shadow: 0 3px 16px rgb(16, 184, 184);
-    margin-bottom: 20px;
-}
-
-.about-me__picture{
-    width: 134%;
-}
-
-.about-me__info--para{
-    font-size: 20px;
+.about-me__img{
+    width: 100%;
 }
