--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,10 @@ li {
   flex: 1;
 }
 
+.container{
+    padding: 50px 0;
+}
+
 .row {
   width: 100%;
   max-width: 800px;
@@ -46,13 +50,20 @@ li {
 .text--blue {
   color: rgb(16, 184, 184);
 }
+section:nth-last-child(even){
+    background-color: azure;
+}
+
+.section__title{
+    margin-bottom: 20px;
+}
 .text--red {
   color: red;
 }
 /*NAVAGATION BAR*/
 
 nav {
-  height: 100px;
+  min-height: 100px;
   width: 100%;
   max-width: 1000px;
   margin: 0 auto;
@@ -81,7 +92,7 @@ nav {
 }
 
 .nav__link--anchor-primary:hover {
-  background-color: green;
+  background-color: rgb(1, 110, 1);
 }
 .personal__logo {
   font-size: 24px;
@@ -92,7 +103,7 @@ nav {
 
 /* ABOUT ME */
 #about-me {
-  min-height: 100vh;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
 }
@@ -110,18 +121,18 @@ flex-direction: column;
   margin: 0 auto;
   text-align: center;
 }
-
+ 
 .about-me__picture--mask {
   width: 100px;
   height: 100px;
   border-radius: 50%;
   overflow: hidden;
-  box-shadow: 0 3px 16px rgb(1, 133, 40);
+  box-shadow: 0 3px 16px rgb(1, 129, 133);
   margin-bottom: 20px;
 }
 
 .about-me__picture {
-  width: 134%;
+  width: 135%;
 }
 
 .about-me__info--para {
@@ -143,4 +154,36 @@ align-items: center;
 
 .about-me__img{
     width: 100%;
+    height: 600px;
+}
+
+/*TECH - STACK */
+
+.language__img{
+    width: 100%;
+    max-width: 135px;
+    transition: all 500ms;
+}
+
+.language__img:hover{
+    filter: brightness(90%);
+    opacity: ;
+transform: scale(0.94);
+}
+
+.language{
+    width: 25%;
+}
+
+.language__img--wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 25px 16px;
+}
+
+.language__list{
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
 }
