--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ li {
 .text--blue {
   color: rgb(16, 184, 184);
 }
-section:nth-last-child(even){
+section:nth-last-child(odd){
     background-color: azure;
 }
 
@@ -167,12 +167,16 @@ align-items: center;
 
 .language__img:hover{
     filter: brightness(90%);
-    opacity: ;
+    opacity: 0.98;
 transform: scale(0.94);
+
 }
 
 .language{
     width: 25%;
+    display: flex;
+    justify-content: center;
+    position: relative;
 }
 
 .language__img--wrapper{
@@ -186,4 +190,18 @@ transform: scale(0.94);
     display: flex;
     width: 100%;
     flex-wrap: wrap;
+}
+
+.language__name{
+  position: absolute;
+  bottom: 0;
+  transform: scale(0);
+  transition: all 300ms;
+  font-size: 20px;
+  color: lightseagreen ;
+  opacity: 0;
+}
+.language:hover .language__name{
+  transform: scale(1);
+  opacity: 1;
 }
