--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
   margin: 0;
   box-sizing: border-box;
 }
+html{
+  scroll-behavior:smooth;
+}
+
 h1,
 h2,
 h3,
@@ -18,12 +22,16 @@ span {
 }
 
 h1 {
-  font-size: 27px;
+  font-size: 28px;
 }
 
 p {
   line-height: 1.5;
   font-size: 16px;
+}
+
+a{
+  text-decoration: none;
 }
 
 li {
@@ -39,7 +47,7 @@ li {
 }
 
 .container{
-    padding: 50px 0;
+    padding: 30px 0;
 }
 
 .row {
@@ -79,7 +87,6 @@ nav {
 .nav__link--anchor {
   margin: 0 12px;
   color: #242424;
-  text-decoration: none;
   font-weight: 700;
 }
 
@@ -204,4 +211,139 @@ transform: scale(0.94);
 .language:hover .language__name{
   transform: scale(1);
   opacity: 1;
+}
+
+/* PROJECTS */
+.project{
+  margin-bottom: 100px;
+}
+
+.project:last-child{
+  margin-bottom: 0px;
+}
+
+.project__img{
+  height: 100%;
+  width: 104%;
+  transition: all 500ms ease;
+}
+
+.project__wrapper{
+  display: flex;
+  box-shadow: 0 20px 80px rgba(25, 184, 247, 0.45);
+  border-radius: 20px;
+  overflow:hidden;
+  position: relative;
+  justify-content: center;
+}
+
+.project__wrapper::before{
+content:"";
+position: absolute;
+top: 0;
+left: 0;
+height: 100%;
+width: 100%;
+background-color: #1c1d25;
+opacity: 0;
+transition: 450ms ease;
+z-index: 2;
+}
+.project:hover .project__wrapper::before{
+  opacity: 0.7;
+}
+
+.project:hover .project__img{
+  transform: scale(1.02);
+  filter:blur(2px) ;
+}
+
+.project:hover .project__description {
+opacity:1;
+transform: translateY(-40%);
+}
+
+
+
+.project__description{
+  position: absolute;
+  top: 50%;
+  left: 90px;
+  transform: translateY(100%);
+  max-width: 550px;
+  z-index: 3;
+  opacity: 0;
+  transition: transform 450ms, opacity 300ms;
+}
+
+.project__description--title{
+  font-size: 50px;
+}
+.project__description--para{
+  margin: 10px 0px;
+}
+.project__description--link{
+  font-size: 20px;
+  text-decoration: none;
+}
+
+.project__description--title,
+.project__description--sub-title,
+.project__description--para,
+.project__description--link
+{
+text-align: left;
+color: #fff;
+}
+
+/*FOOTER*/
+
+footer{
+  background-color: rgb(12, 184, 204);
+}
+
+.footer__social--list{
+  width: 100%;
+  max-width: 500px;
+  display: flex;
+  justify-content: space-around;
+  margin-bottom:20px ;
+}
+
+.footer__row{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+padding: 3% 0 ;
+}
+
+.footer__logo--img{
+  width: 100px;
+  height: 100px;
+}
+
+.footer__social--link,
+.footer__copyright,
+.footer__logo--popper{
+  color: whitesmoke;
+}
+
+.footer__logo--popper{
+  position: absolute;
+  right: 0;
+  top: 40px;
+  font-weight: 700;
+  opacity: 0;
+  transition: all 700ms ease;
+}
+
+.footer__anchor{
+  position: relative;
+  margin-bottom: 14px;
+}
+.footer__anchor:hover .footer__logo--popper{
+  transform: translateX(50px);
+opacity: 1;
+
 }
