--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,40 @@ p {
 
 a{
   text-decoration: none;
+  position: relative;
 }
+
+i {
+  transition: all 300ms ease;
+}
+
+i:hover{
+  opacity: 0.7;
+}
+
+.link__hover-effect:after{
+  content: "";
+  position: absolute;
+  height: 3px;
+  width: 0;
+  bottom: -3px;
+  right: 0;
+  transition: all 300ms ease;
+}
+
+.link__hover-effect--white::after{
+  background-color: silver;
+}
+
+.link__hover-effect--black::after{
+  background-color: green;
+}
+
+.link__hover-effect:hover::after{
+  width: 100%;
+  left: 0;
+}
+
 
 li {
   list-style-type: none;
@@ -54,6 +87,7 @@ li {
   width: 100%;
   max-width: 800px;
   margin: 0 auto;
+  padding: 0 25px;
 }
 .text--blue {
   color: rgb(16, 184, 184);
@@ -78,6 +112,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 12px;
 }
 
 .nav__link--list {
@@ -136,21 +171,56 @@ flex-direction: column;
   overflow: hidden;
   box-shadow: 0 3px 16px rgb(1, 129, 133);
   margin-bottom: 20px;
+  animation: animate-profile-picture 800ms 30ms backwards;
+}
+
+@keyframes animate-profile-picture{
+ 
+  0%{
+    transform: scale(0);
+  }
+
+  80% {
+    transform:scale(1.1);
+  }
+
+  100% {
+    transform:scale(1)
+  }
 }
 
 .about-me__picture {
   width: 135%;
 }
+.about-me__info--title{
+  margin-bottom: 16px;
+  animation: fade-up 650ms 600ms backwards ;
+}
 
 .about-me__info--para {
-  font-size: 20px;
+  font-size: 19px;
+  animation: fade-up 650ms 700ms backwards ;
 }
 
 .about-me__link {
   color: rgb(16, 184, 184);
   font-size: 29px;
-  text-decoration: none;
   padding: 0 5px;
+}
+.about-me__links{
+  animation: fade-up 650ms 800ms backwards ;
+
+}
+
+@keyframes fade-up{
+  0%{
+    opacity: 0;
+    transform: translateY(40px);
+  }
+  100% {
+  opacity: 1;
+  transform: translateY(0);
+  }
 }
 
 .about-me__img--container{
@@ -161,15 +231,41 @@ align-items: center;
 
 .about-me__img{
     width: 100%;
-    height: 600px;
+    border-radius: 100px;
+    animation: fade-in 1200ms 800ms backwards;
 }
+  @keyframes fade-in{
+    0%{
+     opacity: 0; 
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  .money{
+    display: inline-block;
+    animation:animate-money 500ms infinite ease-in-out;
+  }
+
+  @keyframes animate-money{
+    0%{
+      transform: rotate(0) ;
+    }
+    50%{
+      transform: rotate(20deg);
+    }
+    100%{
+      transform: rotate(0);
+    }
+  }
 
 /*TECH - STACK */
 
 .language__img{
-    width: 100%;
-    max-width: 135px;
-    transition: all 500ms;
+  width: 100%;
+  border-radius: 18px;
+  max-width: 135px;
+  transition: all 500ms;
 }
 
 .language__img:hover{
@@ -214,8 +310,9 @@ transform: scale(0.94);
 }
 
 /* PROJECTS */
+
 .project{
-  margin-bottom: 100px;
+  margin: 50px 0;
 }
 
 .project:last-child{
@@ -224,14 +321,14 @@ transform: scale(0.94);
 
 .project__img{
   height: 100%;
-  width: 104%;
+  width: 106%;
   transition: all 500ms ease;
 }
 
 .project__wrapper{
   display: flex;
-  box-shadow: 0 20px 80px rgba(25, 184, 247, 0.45);
-  border-radius: 20px;
+  box-shadow: 0 20px 80px rgba(0, 183, 255, 0.45);
+  border-radius: 50px;
   overflow:hidden;
   position: relative;
   justify-content: center;
@@ -284,7 +381,7 @@ transform: translateY(-40%);
 }
 .project__description--link{
   font-size: 20px;
-  text-decoration: none;
+  margin-right: 16px;
 }
 
 .project__description--title,
@@ -342,8 +439,75 @@ padding: 3% 0 ;
   position: relative;
   margin-bottom: 14px;
 }
+
 .footer__anchor:hover .footer__logo--popper{
   transform: translateX(50px);
 opacity: 1;
+}
+
+
+/*Small phones, Tablets, Large Smartphones */
+@media(max-width:760px) {
+nav{
+  height: 60px;
+}
+
+h1{
+  font-size: 24px;
+}
+
+.about-me__info--para{
+font-size: 16px;
+padding: 0 10px;
+}
+.language{
+  width: calc(100%/2);
+}
+.project__description--para{
+font-size: 14px;
+}
+.project__description{
+padding-right: 4px;
+left: 30px;
+}
+.project__description--title{
+  font-size: 30px;
+}
+.project__description--sub-title{
+  font-size: 19px;
+}
+}
+
+/*Small Phones*/
+
+@media(max-width:480px){
+.nav__link:not(:last-child){
+  display: none;
+}
+.project__description{
+  padding: 0;
+  left: 0;
+  width: 100%;
+}
+
+.project__description--para{
+  display: none;
+}
+
+.project__description--links{
+  display: flex;
+  justify-content: center;
+}
+
+.project__description--title{
+  font-size: 27px;
+ line-height: 1;
+ text-align: center;
+}
+
+.project__description--sub-title{
+ text-align: center;
+ margin: 12px 0;
+}
 
 }
